# casper-node

./: .drone.yml  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Macias  Makefile  README.md  SECURITY.md  bors.toml  build_wasm_package.sh  default.nix  docker_make.sh  generate-chainspec.sh  joiner-dev-tmux.sh  node.nix  output.txt  process_schema.py  req.json  run-dev-tmux.sh  run-dev.sh  rust-toolchain  rustfmt.toml  shell.nix  stop-dev.sh  test_upgrade_rc.sh  update-rev.sh  upload.sh  vm2-build-contracts.sh
binary_port/: Cargo.toml  README.md
binary_port/src/: balance_response.rs  binary_message.rs  binary_request.rs  binary_response.rs  binary_response_and_request.rs  binary_response_header.rs  dictionary_item_identifier.rs  entity_qualifier.rs  era_identifier.rs  error.rs  error_code.rs  get_request.rs  global_state_query_result.rs  information_request.rs  key_prefix.rs  lib.rs  minimal_block_info.rs  node_status.rs  original_request_context.rs  original_request_spec.rs  payload_type.rs  purse_identifier.rs  raw_bytes_spec.rs  response_type.rs  speculative_execution_result.rs  state_request.rs  type_wrappers.rs
bytesrepr/: Cargo.toml
bytesrepr/src/: bytes.rs  lib.rs
bytesrepr_derive/: Cargo.toml  README.md
bytesrepr_derive/src/: lib.rs
bytesrepr_derive/tests/: sample_derives.rs  struct_derive.rs
capnp_conv/: Cargo.toml
capnp_conv/capnp_conv_derive/: Cargo.toml
capnp_conv/capnp_conv_test/: Cargo.toml
capnp_conv/src/: converters.rs  lib.rs  private.rs
capnp_types/: Cargo.toml
capnp_types/src/: capnp.rs  global_state_capnp.rs  lib.rs  map.rs
cargo-casper/: Cargo.toml  build.rs
cargo-casper/src/: main.rs
ci/casper_updater/: Cargo.toml  README.md
client/: CHANGELOG.md  Cargo.toml  README.md  build.rs  cbindgen.toml
client/.rpm/: casper-client.spec
client/app/: command.rs  common.rs  generate_completion.rs  keygen.rs
client/client-lib/: Cargo.toml
client/headers/: casper_client.h
client/lib/: balance.rs  block.rs  cl_type.rs  common.rs  deploy.rs  error.rs  executable_deploy_item_ext.rs  ffi.rs  get_global_state_hash.rs  get_state_hash.rs  keygen.rs  lib.rs  merkle_proofs.rs  parsing.rs  query_state.rs  rpc.rs  validation.rs
client/src/: account_address.rs  balance.rs  block.rs  command.rs  common.rs  deploy.rs  docs.rs  error.rs  generate_completion.rs  get_account_info.rs  get_auction_info.rs  get_balance.rs  get_deploy.rs  get_dictionary_item.rs  get_era_info.rs  get_era_info_by_switch_block.rs  get_global_state_hash.rs  get_state_hash.rs  get_validator_changes.rs  get_validator_info.rs  global_state_query.rs  keygen.rs  lib.rs  main.rs  merkle_proofs.rs  params.rs  put_deploy.rs  query_dictionary.rs  query_global_state.rs  query_state.rs  rpc.rs
client/tests/: integration_test.rs
connection_manager/: Cargo.toml
connection_manager/src/: lib.rs  outgoing.rs
cosy-macro/: Cargo.toml  README.md
cosy-macro/examples/: reactor.rs
cosy-macro/src/: gen.rs  lib.rs  parse.rs  rust_type.rs  util.rs
execution_engine/: CHANGELOG.md  Cargo.toml  README.md
execution_engine/benches/: runtime_bench.rs  trie_bench.rs
execution_engine/src/: config.rs  core.rs  legacy.rs  lib.rs  shared.rs  storage.rs  system.rs
execution_engine_testing/cargo_casper/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
hashing/: CHANGELOG.md  Cargo.toml  README.md
hashing/benches/: chunk_benchmark.rs  digest_benchmark.rs
hashing/src/: blake2b_hash.rs  chunk_with_proof.rs  digest.rs  error.rs  indexed_merkle_proof.rs  lib.rs  util.rs
json_rpc/: CHANGELOG.md  Cargo.toml  README.md
json_rpc/src/: error.rs  filters.rs  lib.rs  rejections.rs  request.rs  request_handlers.rs  response.rs
juliet/: .gitignore  Cargo.toml  README.md  coverage.sh  test.sh
juliet/examples/: fizzbuzz.rs
juliet/proptest-regressions/: header.txt  io.txt  lib.txt  multiframe.txt  varint.txt
juliet/src/: error.rs  header.rs  io.rs  lib.rs  multiframe.rs  protocol.rs  reader.rs  rpc.rs  util.rs  varint.rs  writer.rs
macros/: Cargo.toml  README.md
macros/src/: calltable_from_bytes.rs  calltable_to_bytes.rs  error.rs  lib.rs  types.rs
muxink/: Cargo.toml
muxink/src/: backpressured.rs  codec.rs  demux.rs  error.rs  fixed_size.rs  fragmented.rs  framing.rs  io.rs  lib.rs  little_endian.rs  mux.rs  testing.rs
node/: BINARY_PORT_PROTOCOL.md  CHANGELOG.md  Cargo.toml  README.md  build.rs
node/benches/: capnproto_bench.rs  trie_bench.rs
node/src/: cli.rs  components.rs  config_migration.rs  contract_shared.rs  contract_storage.rs  crypto.rs  data_migration.rs  dead_metrics.rs  disabled_failpoints.rs  effect.rs  failpoints.rs  failpoints_disabled.rs  lib.rs  logging.rs  protocol.rs  reactor.rs  testing.rs  tls.rs  types.rs  utils.rs
node_macros/: CHANGELOG.md  Cargo.toml  README.md
node_macros/src/: gen.rs  lib.rs  parse.rs  rust_type.rs  util.rs
rpc_sidecar/: Cargo.toml  PROTOCOL.md  README.md  build.rs
rpc_sidecar/src/: config.rs  http_server.rs  lib.rs  node_client.rs  node_interface.rs  rpcs.rs  speculative_exec_server.rs
storage/: Cargo.toml  README.md
storage/benches/: global_state_key_write_bench.rs
storage/src/: address_generator.rs  data_access_layer.rs  global_state.rs  lib.rs  system.rs
types/: CHANGELOG.md  Cargo.toml  README.md  a.txt  build.rs
types/benches/: bytesrepr_bench.rs  check_summed_hex_bench.rs  checksummed_hex_bench.rs
types/proptest-regressions/: bytesrepr.txt  check_summed_hex.txt  stored_value.txt
types/src/: access_rights.rs  account.rs  addressable_entity.rs  api_error.rs  auction.rs  auction_state.rs  binary_port.rs  block.rs  block_time.rs  byte_code.rs  bytesrepr.rs  chainspec.rs  check_summed_hex.rs  checksummed_hex.rs  cl_type.rs  cl_value.rs  contract_messages.rs  contract_wasm.rs  contracts.rs  crypto.rs  gas.rs  (+44 more)
validation/: Cargo.toml
vm/: Cargo.toml  test-contract.wasm  vm2-cep18-caller.wasm  vm2-cep18.wasm  vm2-harness.wasm  vm2-test-contract.wasm  vm2-trait.wasm  vm2_cep18.wasm  vm2_flipper.wasm  vm2_trait.wasm  vm2_upgradable.wasm  vm2_upgradable_v2.wasm
vm-common/: Cargo.toml
xtask/: Cargo.toml
(+4163 files in other folders)
