[workspace]
resolver = "1"
members = [
    "ci/casper_updater",
    "execution_engine",
    "execution_engine_testing/test_support",
    "execution_engine_testing/tests",
    "json_rpc",
    "node",
    "smart_contracts/contract",
    "smart_contracts/contracts/[!.]*/*",
    "storage",
    "types",
    "utils/global-state-update-gen",
    "utils/validation",
    "vm",
    "vm-common",
    "smart_contracts/sdk",
    "smart_contracts/sdk-codegen",
    "smart_contracts/sdk-sys",
    "smart_contracts/macros"
]

default-members = [
    "ci/casper_updater",
    "execution_engine",
    "execution_engine_testing/test_support",
    "execution_engine_testing/tests",
    "json_rpc",
    "node",
    "storage",
    "types",
    "utils/global-state-update-gen",
    "utils/validation",
    "vm",
    "vm-common",
    "smart_contracts/sdk",
    "smart_contracts/sdk-sys",
    "smart_contracts/sdk-codegen",
    "smart_contracts/macros"
]

exclude = ["utils/nctl/remotes/casper-client-rs"]

# Include debug symbols in the release build of `casper-engine-tests` so that `simple-transfer` will yield useful
# perf data.
[profile.release.package.casper-engine-tests]
debug = true

[profile.release]
codegen-units = 1
lto = true

[profile.bench]
codegen-units = 1
lto = true
