[workspace]

# highway-rewards-analysis and highway-state-grapher are temporarily disabled becasue
# they use old rewards calculation logic and need to be updated.

members = [
    "ci/casper_updater",
    "execution_engine",
    "execution_engine_testing/test_support",
    "execution_engine_testing/tests",
    "node",
    "smart_contracts/contract",
    "smart_contracts/contracts/[!.]*/*",
    "storage",
    "types",
    "utils/global-state-update-gen",
    "utils/validation",
    "binary_port",
    "smart_contracts/sdk",
    "smart_contracts/sdk-codegen",
    "smart_contracts/sdk-sys",
    "smart_contracts/macros",
    "cargo-casper",
#    "utils/highway-rewards-analysis",
#    "utils/highway-state-grapher",
    "executor/wasm-common",
    "executor/wasm-interface",
    "executor/wasm-host",
    "executor/wasmer-backend",
    "executor/wasm",
]

default-members = [
    "ci/casper_updater",
    "execution_engine",
    "execution_engine_testing/test_support",
    "execution_engine_testing/tests",
    "node",
    "storage",
    "types",
    "utils/global-state-update-gen",
    "utils/validation",
    "binary_port",
    "smart_contracts/sdk",
    "smart_contracts/sdk-sys",
    "smart_contracts/sdk-codegen",
    "smart_contracts/macros"
#    "utils/highway-rewards-analysis",
#    "utils/highway-state-grapher",
]

exclude = ["utils/nctl/remotes/casper-client-rs"]

resolver = "2"

# Include debug symbols in the release build of `casper-engine-tests` so that `simple-transfer` will yield useful
# perf data.
[profile.release.package.casper-engine-tests]
debug = true

[profile.release]
codegen-units=1
lto=true

[profile.bench]
codegen-units = 1
lto = true
