[package]
name = "bytesrepr"
version = "0.1.0"
edition = "2018"

[dependencies]
base16 = { version = "0.2.1", default-features = false }
datasize = { version = "0.2.4", default-features = false }
num-integer = { version = "0.1.42", default-features = false }
num-rational = { version = "0.4.0", default-features = false }
rand = "0.8.4"
serde = { version = "1", default-features = false, features = ["derive"]}
thiserror = { version = "1.0.20", default-features = false }

[dev-dependencies]
proptest = "1.0.0"
proptest-attr-macro = "1.0.0"
serde_json = "1.0.67"
serde_test = "1.0.117"

[features]
default = ["std"]
std = [
    "base16/std",
    "serde/std",
]
alloc = ["serde/alloc"]
