[package]
name = "bytesrepr_derive"
authors = [ "Marc Brinkmann <marc@casperlabs.io>" ]
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
once_cell = "1.17.1"
proc-macro2 = "1.0.52"
quote = "1.0.26"
syn = "2.0.4"

[dev-dependencies]
casper-types = { version = "1.5.0", path = "../types", features = [] }
