[package]
name = "casper-capnp-types"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", default-features = false }
capnp = { version = "0.14.5", default-features = false }
capnp-conv = { path = "../capnp_conv", default-features = false }
ref-cast = { version = "1.0.6", default-features = false }

[dev-dependencies]
proptest = "1.0.0"
test-strategy = "0.1.2"

[features]
default = ["std"]
std = ["anyhow/std", "capnp/std", "capnp-conv/std"]