[package]
name = "cargo-casper"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap-cargo = { version = "0.14.0", features = ["cargo_metadata"] }
libloading = "0.8.3"
casper-sdk-sys = { path = "../smart_contracts/sdk-sys" }
casper-sdk = { path = "../smart_contracts/sdk", features = ["__abi_generator"] }
