[package]
name = "casper-client"
version = "0.1.0"
authors = ["Marc Brinkmann <marc@casperlabs.io>", "Fraser Hutchison <fraser@casperlabs.io>"]
edition = "2018"
description = "A client for interacting with the Casper network"
readme = "README.md"
homepage = "https://casperlabs.io"
repository = "https://github.com/CasperLabs/casper-node"
license-file = "../LICENSE"

[dependencies]
base64 = "0.12.3"
casper-execution-engine = { path = "../execution_engine" }
casper-node = { path = "../node" }
casper-types = { path = "../types", features = ["std"] }
clap = "2.33.1"
futures = "0.3.5"
hex = { version = "0.4.2", features = ["serde"] }
jsonrpc-lite = "0.5.0"
lazy_static = "1.4.0"
rand = "0.7.3"
reqwest = { version = "0.10.6", features = ["json"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1.0.55"
thiserror = "1.0.20"
tokio = { version = "0.2.20", features = ["macros", "rt-threaded", "sync", "tcp", "time", "blocking"] }

[package.metadata.deb]
features = ["vendored-openssl"]
revision = "0"
assets = [
    ["../target/release/casper-client", "/usr/bin/casper-client", "755"],
]
extended-description = """
Package for Casper Client to connect to Casper Node.

For information on using package, see https://github.com/CasperLabs/casper-node
"""
