[package]
name = "casper-client"
version = "1.4.3"
authors = ["Marc Brinkmann <marc@casperlabs.io>", "Fraser Hutchison <fraser@casperlabs.io>"]
edition = "2018"
description = "A client for interacting with the Casper network"
readme = "README.md"
documentation = "https://docs.rs/casper-client"
homepage = "https://casperlabs.io"
repository = "https://github.com/CasperLabs/casper-node/tree/master/client"
license = "Apache-2.0"

[lib]
name = "casper_client"
crate-type = ["rlib", "cdylib"]
path = "lib/lib.rs"

[[bin]]
name = "casper-client"
path = "src/main.rs"
doc = false

[dependencies]
async-trait = "0.1.50"
base16 = "0.2.1"
base64 = "0.13.0"
casper-execution-engine = { version = "1.4.3", path = "../execution_engine" }
casper-node = { version = "1.4.3", path = "../node" }
casper-hashing = { version = "1.4.2", path = "../hashing" }
casper-types = { version = "1.4.5", path = "../types" }
clap = "2"
humantime = "2"
jsonrpc-lite = "0.5.0"
once_cell = "1"
rand = "0.8.3"
reqwest = { version = "0.11.1", features = ["json"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }

[build-dependencies]
cbindgen = { version = "0.18", optional = true }

[dev-dependencies]
anyhow = "1"
casper-node = { path = "../node" }
futures = "0.3.13"
hyper = "0.14.4"
jsonrpc-lite = "0.5.0"
semver = "0.11"
serde = "1"
tower = "0.4.6"
warp = "0.3.0"
warp-json-rpc = "0.3.0"

[features]
default = ["ffi"]
ffi = ["cbindgen"]

[package.metadata.deb]
features = ["vendored-openssl"]
revision = "0"
assets = [
    ["../target/release/casper-client", "/usr/bin/casper-client", "755"],
]
extended-description = """
Package for Casper Client to connect to Casper Node.

For information on using package, see https://github.com/CasperLabs/casper-node
"""

[package.metadata.rpm]
package = "casper-client"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
casper-client = { path = "/usr/bin/casper-client" }
