[package]
authors = ["Marc Brinkmann <marc@casperlabs.io>"]
edition = "2018"
name = "connection_manager"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
rand_chacha = "0.3.0"
thiserror = "1.0.24"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"

[workspace]
