[package]
name = "cosy-macros"
version = "0.1.0"
authors = ["Marc Brinkmann <marc@casperlabs.io>"]
edition = "2018"

[dependencies]
syn = { version = "1.0.40", features = ["full"] }
proc-macro2 = "1.0.21"
Inflector = "0.11.4"
indexmap = "1.6.0"

[lib]
proc-macro = true

[dev-dependencies]
rand = "0.7.3"
anyhow = "1.0.32"
