[package]
name = "casper-execution-engine"
version = "0.9.0" # when updating, also update 'html_root_url' in lib.rs
authors = ["Henry Till <henrytill@gmail.com>", "Ed Hastings <ed@casperlabs.io>"]
edition = "2018"
description = "CasperLabs execution engine crates."
readme = "README.md"
documentation = "https://docs.rs/casper-execution-engine"
homepage = "https://casperlabs.io"
repository = "https://github.com/CasperLabs/casper-node/tree/master/execution_engine"
license-file = "../LICENSE"

[dependencies]
anyhow = "1.0.33"
base16 = "0.2.1"
bincode = "1.3.1"
blake2 = "0.9.0"
casper-types = { version = "0.9.0", path = "../types", features = ["std", "gens"] }
chrono = "0.4.10"
datasize = "0.2.4"
hex = "0.4.2"
hex-buffer-serde = "0.2.1"
hex_fmt = "0.3.0"
hostname = "0.3.0"
itertools = "0.9.0"
libc = "0.2.66"
linked-hash-map = "0.5.3"
lmdb = "0.8"
log = { version = "0.4.8", features = ["std", "serde", "kv_unstable"] }
num = { version = "0.3.0", default-features = false }
num-derive = "0.3.0"
num-rational = { version = "0.3.0", features = ["serde"] }
num-traits = "0.2.10"
once_cell = "1.5.2"
parity-wasm = "0.41.0"
proptest = { version = "0.10.0", optional = true }
pwasm-utils = "0.12.0"
rand = "0.7.3"
rand_chacha = "0.2.2"
schemars = { version = "0.8.0", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.5"
serde_json = "1"
thiserror = "1.0.18"
tracing = "0.1.18"
uint = "0.8.3"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
wasmi = "0.6.2"

[dev-dependencies]
assert_matches = "1.3.0"
criterion = "0.3.3"
proptest = "0.10.0"
tempfile = "3.1.0"

[features]
default = ["gens"]
gens = ["proptest"]
test-support = []

[[bench]]
name = "trie_bench"
harness = false

