[package]
name = "casper-execution-engine"
version = "2.0.1" # when updating, also update 'html_root_url' in lib.rs
authors = ["Henry Till <henrytill@gmail.com>", "Ed Hastings <ed@casperlabs.io>"]
edition = "2018"
description = "CasperLabs execution engine crates."
readme = "README.md"
documentation = "https://docs.rs/casper-execution-engine"
homepage = "https://casperlabs.io"
repository = "https://github.com/CasperLabs/casper-node/tree/master/execution_engine"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.33"
base16 = "0.2.1"
bincode = "1.3.1"
casper-hashing = { version = "1.4.3", path = "../hashing" }
casper-types = { version = "1.5.0", path = "../types", features = ["datasize", "json-schema"] }
datasize = "0.2.4"
hex-buffer-serde = "0.2.1"
hex_fmt = "0.3.0"
hostname = "0.3.0"
humantime = "2"
itertools = "0.10.0"
libc = "0.2.66"
linked-hash-map = "0.5.3"
lmdb = "0.8"
log = { version = "0.4.8", features = ["std", "serde", "kv_unstable"] }
num = { version = "0.4.0", default-features = false }
num-derive = "0.3.0"
num-rational = { version = "0.4.0", features = ["serde"] }
num-traits = "0.2.10"
once_cell = "1.5.2"
parity-wasm = "0.41.0"
proptest = { version = "1.0.0", optional = true }
pwasm-utils = "0.16.0"
rand = "0.8.3"
rand_chacha = "0.3.0"
schemars = { version = "=0.8.5", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.5"
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1.0.18"
tracing = "0.1.18"
uint = "0.9.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
# By depending on wasmi 0.8.0 we are stuck with parity-wasm 0.41.0
# and pwasm-utils 0.16 as upstream wasmi still depends on 0.41.0.
# https://github.com/paritytech/wasmi/commit/f5fd480260490ff0de455017229caf7baee68195
wasmi = "0.8.0"

[dev-dependencies]
assert_matches = "1.3.0"
casper-types = { path = "../types", features = ["datasize", "json-schema", "testing"] }
criterion = "0.3.5"
proptest = "1.0.0"
tempfile = "3.1.0"

[features]
default = ["gens"]
# DEPRECATED
gens = ["casper-types/testing", "proptest"]
test-support = []

[[bench]]
name = "trie_bench"
harness = false
