[package]
name = "casper-execution-engine"
version = "7.0.1" # when updating, also update 'html_root_url' in lib.rs
authors = ["Henry Till <henrytill@gmail.com>", "Ed Hastings <ed@casperlabs.io>"]
edition = "2021"
description = "Casper execution engine crates."
readme = "README.md"
documentation = "https://docs.rs/casper-execution-engine"
homepage = "https://casperlabs.io"
repository = "https://github.com/CasperLabs/casper-node/tree/master/execution_engine"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.33"
base16 = "0.2.1"
bincode = "1.3.1"
casper-hashing = { version = "3.0.0", path = "../hashing" }
casper-types = { version = "4.0.1", path = "../types", default-features = false, features = ["datasize", "gens", "json-schema"] }
casper-wasm = { version = "0.46.0", default-features = false }
casper-wasm-utils = "3.0.0"
casper-wasmi = "0.13.2"
datasize = "0.2.4"
either = "1.8.1"
hex-buffer-serde = "0.2.1"
hex_fmt = "0.3.0"
hostname = "0.3.0"
humantime = "2"
itertools = "0.10.0"
libc = "0.2.66"
linked-hash-map = "0.5.3"
lmdb-rkv = "0.14"
log = { version = "0.4.8", features = ["std", "serde", "kv_unstable"] }
num = { version = "0.4.0", default-features = false }
num-derive = "0.3.0"
num-rational = { version = "0.4.0", features = ["serde"] }
num-traits = "0.2.10"
num_cpus = "1"
once_cell = "1.5.2"
proptest = { version = "1.0.0", optional = true }
rand = "0.8.3"
rand_chacha = "0.3.0"
schemars = { version = "=0.8.5", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.5"
serde_json = { version = "1", features = ["preserve_order"] }
strum = { version = "0.24.1", features = ["strum_macros", "derive"], optional = true }
thiserror = "1.0.18"
tracing = "0.1.18"
uint = "0.9.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[dev-dependencies]
assert_matches = "1.3.0"
casper-types = { path = "../types", features = ["datasize", "json-schema", "testing"] }
criterion = "0.3.5"
proptest = "1.0.0"
tempfile = "3.4.0"
walrus = "0.20.2"

[features]
default = ["gens"]
# DEPRECATED
gens = ["casper-types/testing", "proptest", "strum"]
test-support = []

[[bench]]
name = "trie_bench"
harness = false
