[package]
name = "casper-hashing"
version = "1.0.0"
edition = "2018"
description = "A library providing hashing functionality including Merkle Proof utilities."
readme = "README.md"
documentation = "https://docs.rs/casper-hashing"
homepage = "https://casperlabs.io"
repository = "https://github.com/CasperLabs/casper-node/tree/master/hashing"
license-file = "../LICENSE"

[dependencies]
blake2 = { version = "0.9.0", default-features = false }
base16 = { version = "0.2.1", default-features = false }
datasize = { version = "0.2.9", default-features = false }
hex = { version = "0.4.2", default-features = false, features = ["serde"] }
hex-buffer-serde = "0.3.0"
itertools = { version = "0.10.1", default-features = false }
schemars = { version = "0.8.3", optional = true }
serde = { version = "1.0.130", default-features = false }

[dev-dependencies]
assert_matches = "1.3.0"
criterion = "0.3.5"
proptest = "1.0.0"
proptest-attr-macro = "1.0.0"
tempfile = "3.1.0"

[features]
json-schema = ["schemars"]
