[package]
name = "casper-hashing"
version = "1.4.3"
edition = "2018"
description = "A library providing hashing functionality including Merkle Proof utilities."
readme = "README.md"
documentation = "https://docs.rs/casper-hashing"
homepage = "https://casperlabs.io"
repository = "https://github.com/CasperLabs/casper-node/tree/master/hashing"
license = "Apache-2.0"

[dependencies]
blake2 = "0.9.0"
base16 = "0.2.1"
casper-types = { version = "1.5.0", path = "../types" }
datasize = "0.2.9"
hex = { version = "0.4.2", default-features = false, features = ["serde"] }
hex-buffer-serde = "0.3.0"
itertools = "0.10.1"
once_cell = "1"
schemars = { version = "=0.8.5", features = ["preserve_order"] }
serde = "1.0.130"
thiserror = "1.0.29"

[dev-dependencies]
bincode = "1.3.1"
assert_matches = "1.3.0"
criterion = "0.3.5"
proptest = "1.0.0"
proptest-attr-macro = "1.0.0"
tempfile = "3.1.0"
serde_json = "1.0"
rand = "0.8.4"