[package]
name = "muxink"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
bincode = { version = "1.3.3", optional = true }
bytes = "1.1.0"
futures = "0.3.21"
serde = { version = "1.0.138", optional = true }
thiserror = "1.0.31"
tokio = { version = "1.18.1", features = [ "full" ] }
tokio-util = "0.7.2"
casper-types = { path = "../types", optional = true }

[dev-dependencies]
tokio-stream = "0.1.8"

[features]
bincode = [ "dep:serde", "dep:bincode" ]
bytesrepr = [ "dep:casper-types" ] 